# csv-io

./: CMakeLists.txt  README.md
include/: csv_data.h
src/: csv_data.cpp  main.cpp
test/: csv_data_tests.cpp
test/resources/: .gitignore  inconsistent_rows_0.csv  inconsistent_rows_1.csv  unexpected_character_0.csv  unexpected_character_1.csv  valid_csv.csv
